--- a/strona_glowna.html
+++ b/strona_glowna.html
@@ -2,122 +2,53 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8"/>
-    <title>Najlepsze Dystrybucje Linuxa!</title>
-    <meta name="description" content="Przed tobą moja subiektywna lista najlepszych dystrybucji Linuxa"/>
-    <meta name="keywords" content="Linux, najlepsze systemy, najlepsze dystrybucje Linuxa, top distra dla początkujących"/>
+    <title>Strona Główna - Najlepsze Dystrybucje Linuxa!</title>
+    <meta name="description" content="Witaj na stronie głównej - Top 5 Najlepszych Dystrybucji Linuxa!"/>
+    <meta name="keywords" content="Linux, dystrybucje Linuxa, najlepsze systemy, top distra"/>
     <meta name="author" content="Jan Soból"/>
 
     <style>
-      @font-face {
-        font-family: 'GoogleSans';
-        src: url('GoogleSans-Regular.ttf') format('truetype');
-      }
-
       body {
-        font-family: 'GoogleSans', sans-serif;
+        font-family: 'Arial', sans-serif;
+        background-color: #f4f4f4;
+        color: #333;
+        margin: 0;
+        padding: 0;
       }
 
-      #container {
-        width: 1000px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      #logo {
-        background-color: black;
+      header {
+        background-color: #333;
         color: white;
         text-align: center;
         padding: 15px;
       }
 
-      #nav {
-        float: left;
-        background-color: lightgray;
-        width: 120px;
-        min-height: 620px;
-        padding: 10px;
-        cursor: pointer;
-      }
-
-      #content {
-        float: left;
+      section {
         padding: 20px;
-        width: 640px;
-      }
-
-      #ad {
-        float: left;
-        width: 160px;
-        min-height: 620px;
-        padding: 10px;
-        background-color: lightgray;
-      }
-
-      #footer {
-        clear: both;
-        background-color: black;
-        color: white;
         text-align: center;
-        padding: 20px;
-      }
-    </style>
 
+    </style>
   </head>
 
   <body>
+    <header>
+      <h1>Witaj na Stronie Głównej!</h1>
+    </header>
 
-    <div id="container">
+    <section>
+      <p>
+        Cześć! Witaj na mojej stronie poświęconej fascynującemu światowi dystrybucji Linuxa.
+        Tutaj odkryjesz różnorodność systemów operacyjnych opartych na jądrze Linux.
+      </p>
 
-      <div id="logo">
-        <h1>Top 5 Najlepszych Dystrybucji Linuxa!</h1>
-      </div>
+      <p>
+        Zapraszam do eksploracji i poznawania top 5 dystrybucji: Debian, Arch Linux, Ubuntu, Manjaro i Fedora.
+        Każda z nich ma coś wyjątkowego do zaoferowania!
+      </p>
 
-      <div id="nav" onclick="loadPage(event)">
-        <div data-page="home">Strona Główna</div>
-        <div data-page="debian">Debian</div>
-        <div data-page="arch">Arch Linux</div>
-        <div data-page="ubuntu">Ubuntu</div>
-        <div data-page="manjaro">Manjaro</div>
-        <div data-page="fedora">Fedora</div>
-      </div>
-
-      <div id="content">
-      </div>
-
-      <div id="ad">
-        <img src="reklama.jpg"/>
-      </div>
-
-      <div id="footer">
-        Jan Soból &copy; Wszelkie prawa zastrzeżone!
-      </div>
-
-    </div>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        // Automatyczne wczytywanie strony głównej po otwarciu strony
-        loadPage({ target: { dataset: { page: "home" } } });
-      });
-
-      function loadPage(event) {
-        var selectedDistribution = event.target.dataset.page;
-        var contentUrl;
-
-        if (selectedDistribution === "home") {
-          contentUrl = "strona_glowna.html";
-        } else {
-          contentUrl = selectedDistribution + ".html";
-        }
-
-        fetch(contentUrl)
-          .then(response => response.text())
-          .then(data => {
-            document.getElementById('content').innerHTML = data;
-          })
-          .catch(error => console.error('Błąd ładowania treści:', error));
-      }
-    </script>
-
+      <p>
+        W razie pytań lub sugestii, śmiało napisz do mnie. Dziękuję za odwiedzenie!
+      </p>
+    </section>
   </body>
 </html>
