--- a/strona_glowna.html
+++ b/strona_glowna.html
@@ -1,54 +1,37 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="utf-8"/>
-    <title>Strona Główna - Najlepsze Dystrybucje Linuxa!</title>
-    <meta name="description" content="Witaj na stronie głównej - Top 5 Najlepszych Dystrybucji Linuxa!"/>
-    <meta name="keywords" content="Linux, dystrybucje Linuxa, najlepsze systemy, top distra"/>
-    <meta name="author" content="Jan Soból"/>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Moja Strona Główna</title>
+</head>
+<body>
 
-    <style>
-      body {
-        font-family: 'Arial', sans-serif;
-        background-color: #f4f4f4;
-        color: #333;
-        margin: 0;
-        padding: 0;
-      }
-
-      header {
-        background-color: #333;
-        color: white;
-        text-align: center;
-        padding: 15px;
-      }
-
-      section {
-        padding: 20px;
-        text-align: center;
-
-    </style>
-  </head>
-
-  <body>
     <header>
-      <h1>Witaj na Stronie Głównej!</h1>
+        <h1>Witaj na Mojej Stronie Głównej</h1>
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="#">Strona Główna</a></li>
+            <li><a href="#">O Mnie</a></li>
+            <li><a href="#">Kontakt</a></li>
+        </ul>
+    </nav>
+
     <section>
-      <p>
-        Cześć! Witaj na mojej stronie poświęconej fascynującemu światowi dystrybucji Linuxa.
-        Tutaj odkryjesz różnorodność systemów operacyjnych opartych na jądrze Linux.
-      </p>
-
-      <p>
-        Zapraszam do eksploracji i poznawania top 5 dystrybucji: Debian, Arch Linux, Ubuntu, Manjaro i Fedora.
-        Każda z nich ma coś wyjątkowego do zaoferowania!
-      </p>
-
-      <p>
-        W razie pytań lub sugestii, śmiało napisz do mnie. Dziękuję za odwiedzenie!
-      </p>
+        <h2>Ostatnie Aktualności</h2>
+        <p>Tutaj możesz umieścić najnowsze informacje czy aktualności.</p>
     </section>
-  </body>
+
+    <section>
+        <h2>O Mnie</h2>
+        <p>Opowiedz coś o sobie.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Moja Strona Główna</p>
+    </footer>
+
+</body>
 </html>
