--- a/debian.html
+++ b/debian.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linux Debian</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
+        body 
         header {
             text-align: center;
             padding: 10px;
@@ -62,10 +59,5 @@
             Instalacja systemu Debian jest stosunkowo prosta. Możesz pobrać obraz ISO z oficjalnej strony Debian i postępować zgodnie z instrukcjami instalatora.
         </p>
     </section>
-
-    <footer>
-        <p>Strona stworzona w celach edukacyjnych.</p>
-    </footer>
-
 </body>
 </html>
