--- a/debian.html
+++ b/debian.html
@@ -49,7 +49,7 @@
             <li>Stabilność i bezpieczeństwo</li>
             <li>Otwarty kod źródłowy</li>
             <li>Obszerne repozytoria pakietów</li>
-            <li>Zajmuje się wieloma architekturami</li>
+            <li>Dostępny na wiele archtektur</li>
         </ul>
     </section>
 
