--- a/arch.html
+++ b/arch.html
@@ -56,7 +56,7 @@
     <section>
         <h2>Instalacja Archa</h2>
         <p>
-            Instalacja systemu Archa jest Niestety trudna. Możesz pobrać obraz ISO z oficjalnej strony Arch Linux i postępować zgodnie z instrukcjami na Arch viki.
+            Instalacja systemu Archa jest Niestety trudna. Iso możesz pobrać <a href="https://archlinux.org/download/" target="_blank">Tutaj</a>. a natępnie postępuj zgodnie z instrukcjami na Arch viki.
         </p>
     </section>
 </body>
