--- a/debian.html
+++ b/debian.html
@@ -56,7 +56,7 @@
     <section>
         <h2>Instalacja Debian</h2>
         <p>
-            Instalacja systemu Debian jest stosunkowo prosta. Możesz pobrać obraz ISO z oficjalnej strony Debian i postępować zgodnie z instrukcjami instalatora.
+            Instalacja systemu Debian jest stosunkowo prosta. Iso możesz pobrać  <a href="https://www.debian.org/download" target="_blank">Tutaj</a>. i postępować zgodnie z instrukcjami instalatora.
         </p>
     </section>
 </body>
