--- a/ubuntu.html
+++ b/ubuntu.html
@@ -56,7 +56,7 @@
     <section>
         <h2>Instalacja Ubuntu</h2>
         <p>
-            Instalacja systemu Ubuntu jest bardzo łatwa. Możesz pobrać obraz ISO z oficjalnej strony Ubuntu, po wrzuceniu iso na pendrive <br> wystarczy uruchomić komputer z pendrive, ubuntu posiada przyjazny instalator graficzny.
+            Instalacja systemu Ubuntu jest bardzo łatwa. Iso dostaniesz <a href="https://ubuntu.com/download" target="_blank">Tu</a>. , po wrzuceniu iso na pendrive <br> wystarczy uruchomić komputer z pendrive, ubuntu posiada przyjazny instalator graficzny.
         </p>
     </section>
 </body>
